# skill-execution-bench

./: .gitignore  AGENTS.md  Makefile  README.ko.md  README.md  REPORT.ko.md  REPORT.md  go.mod  pyproject.toml
datasets/: tasks-hard.jsonl  tasks-toposort.jsonl  tasks.jsonl
harness/: __init__.py  agent_eval.py  evaluators.py  models.py  normalize.py  run_benchmark.py  runners.py  toposort.py
skills/doc-only/: SKILL.md
skills/go-binary/: SKILL.md
skills/go-binary/cmd/skill-runner/: main.go
skills/inline-code/: SKILL.md
skills/python-script/: SKILL.md
skills/python-script/scripts/: transform.py
skills/toposort-doc-only/: SKILL.md
skills/toposort-go-binary/: SKILL.md
skills/toposort-go-binary/cmd/toposort-runner/: main.go
skills/toposort-inline-code/: SKILL.md
skills/toposort-python-script/: SKILL.md
skills/toposort-python-script/scripts/: toposort.py
tests/: test_agent_eval.py  test_dataset.py  test_evaluators.py  test_runners.py  test_toposort.py
