[project]
name = "skill-execution-bench"
version = "0.1.0"
description = "Benchmark comparing four Skill execution patterns for an LLM coding agent."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["harness"]
